--- a/notebooks/B20_results/B20_paper_fit_tt_hb.ipynb
+++ b/notebooks/B20_results/B20_paper_fit_tt_hb.ipynb
@@ -19,9 +19,13 @@
     "\n",
     "# Local files\n",
     "__root__ = '../../'\n",
+    "__pydirs__ = ['py', 'settings']\n",
     "module_path = os.path.abspath(os.path.join(__root__[:-1]))\n",
     "if module_path not in sys.path:\n",
-    "    sys.path.append(f\"{module_path}/py/\")\n",
+    "    for pydir in __pydirs__:\n",
+    "        sys.path.append(f\"{module_path}/{pydir}/\")\n",
+    "\n",
+    "import T23_setup\n",
     "\n",
     "import log_ret\n",
     "\n",
@@ -34,35 +38,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "B20_setup = dict()\n",
-    "\n",
-    "B20_setup['results_dir'] = f\"{__root__}results/\"\n",
-    "\n",
-    "B20_setup['datetime'] = dict()\n",
-    "B20_setup['datetime']['dt'] = {'w': datetime.datetime.now(datetime.timezone.utc)}\n",
-    "B20_setup['datetime']['str'] = {i: misc_fns.dt_str(B20_setup['datetime']['dt'][i]) for i in B20_setup['datetime']['dt']}\n",
-    "\n",
-    "\n",
-    "B20_setup['ticks'] = ['SPX', 'DJI', 'DAX', 'CAC', 'NKX', 'HSI']\n",
-    "\n",
-    "B20_setup['a_q'] = np.array([float(f'{x:.5f}') for x in 0.0025*(1+np.array(range(60)))])\n",
-    "\n",
-    "B20_setup['a_u'] = np.array([float(f'{x:.5f}') for x in 0.0125*(1+np.array(range(20)))])\n",
-    "\n",
-    "\n",
-    "B20_setup['mode_bound'] =   {\n",
-    "                                'bi': 'both',\n",
-    "                                'bi_d': ['both', 'left', 'right'],\n",
-    "                                'ci': 'both',\n",
-    "                                'ci_s': 'both',\n",
-    "                            }\n",
-    "\n",
-    "B20_setup['dates'] = {\n",
-    "                        'all_start': pd.Timestamp(\"1959-10-02\"),\n",
-    "                        #'all_end': pd.Timestamp(\"2020-11-20\"),\n",
-    "                        'all_end': pd.Timestamp(\"2023-09-16\"),\n",
-    "                        'train_end': pd.Timestamp(\"2008-09-01\"),\n",
-    "                    }"
+    "_setup_T23 = T23_setup.setup_T23(__C__='Cm3', __fit__=True, __vares__=True,\n",
+    "                                    set_cv=False, set_tt=True,\n",
+    "                                    all_end=pd.Timestamp('2023-09-16')\n",
+    "                                    )"
    ]
   },
   {
@@ -71,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in B20_setup['a_q']:\n",
+    "for x in _setup_T23['a_q']:\n",
     "    print(x)"
    ]
   },
@@ -81,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in B20_setup['a_u']:\n",
+    "for x in _setup_T23['tt_a_u']:\n",
     "    print(x)"
    ]
   },
@@ -91,28 +70,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "B20 = log_ret.log_ret(direct=__root__, ticks=B20_setup['ticks'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "B20.set_tk(\n",
-    "                **B20_setup['dates'],\n",
-    "                cv_vol=[\"GARCH\"], cv_p=1, cv_o=[0,1], cv_q=1, cv_dist=[\"norm\", \"t\"],\n",
-    "                tt_a_u=B20_setup['a_u'], tt_dt_dt_fine=24,\n",
-    "                hb_dist=[\"norm\", \"t\"], hb_bound=None, hb_mode_bound=B20_setup['mode_bound'],\n",
-    "                a_q=B20_setup['a_q'],\n",
-    "                #cv_set_am_stats=True, cv_set_eval=False, append_fit_cv_w=True, append_vrs_cv_w=False, cv_write_tick=False,\n",
-    "                #tt_i_0=0, tt_read_params=True, tt_fit_if_need=False,\n",
-    "                set_cv=False, set_tt=True,\n",
-    "                CT_Q=[\"binom\", \"UC\", \"CC\", 'DQ_0', 'DQ_1', 'DQ_2', 'DQ_3', 'DQ_4'],\n",
-    "                CT_E=['ZMD'],\n",
-    "            )"
+    "B20 = log_ret.log_ret(dir_base=__root__, ticks=_setup_T23['ticks'])\n",
+    "B20.set_tk(**misc_fns.dict_key_rm(_setup_T23, keys_rm='ticks'))"
    ]
   },
   {
@@ -135,7 +94,7 @@
    "outputs": [],
    "source": [
     "for fix_a_lambda in [True, False]:\n",
-    "    for i in range(0, B20_setup['a_u'].size):\n",
+    "    for i in range(0, _setup_T23['tt_a_u'].size):\n",
     "        B20.set_tt_hb_mp_tick(write_tick=True, \n",
     "                            a_u_rng=[i], tt_read_params=True, tt_hb_read_params=False, tt_fit_if_need=False, tt_fix_a_lambda=fix_a_lambda, append_fit_tt_w=True, set_eval=True, append_fit_tt_hb_w=True, append_vrs_tt_hb_w=True)"
    ]
