--- a/notebooks/T23_thesis/T23_Cm1.ipynb
+++ b/notebooks/T23_thesis/T23_Cm1.ipynb
@@ -25,9 +25,13 @@
     "\n",
     "# Local files\n",
     "__root__ = '../../'\n",
+    "__pydirs__ = ['py', 'settings']\n",
     "module_path = os.path.abspath(os.path.join(__root__[:-1]))\n",
     "if module_path not in sys.path:\n",
-    "    sys.path.append(f\"{module_path}/py/\")\n",
+    "    for pydir in __pydirs__:\n",
+    "        sys.path.append(f\"{module_path}/{pydir}/\")\n",
+    "\n",
+    "import T23_setup\n",
     "\n",
     "import log_ret\n",
     "\n",
@@ -56,7 +60,7 @@
     "plot_fns.plt_setup(plt, SMALL_SIZE=6.5, MEDIUM_SIZE=6.5, BIGGER_SIZE=8, font_family='serif', use_tex=False)\n",
     "cols = plot_fns.calc_cols()\n",
     "cols_CI = plot_fns.calc_cols_CI()\n",
-    "cols_tail = plot_fns.calc_cols_tail(rows=True)\n"
+    "cols_tail = plot_fns.calc_cols_tail(rows=True)"
    ]
   },
   {
@@ -80,161 +84,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_sd_not_scale():\n",
-    "    return False\n",
-    "\n",
-    "def get_dpi(dpi=None):\n",
-    "    if dpi is None:\n",
-    "        dpi = 300\n",
-    "    return dpi\n",
-    "\n",
-    "def get_thesis(thesis=None):\n",
-    "    if thesis is None:\n",
-    "        thesis = True\n",
-    "    return thesis\n",
-    "\n",
-    "\n",
-    "def get_an_mode(mode=None):\n",
-    "    if mode is None:\n",
-    "        mode = 'thesis'\n",
-    "    return mode\n",
-    "\n",
-    "\n",
-    "def get_C_str_matter():\n",
-    "    return 'm'\n",
-    "def get_C_str_n():\n",
-    "    return 1\n",
-    "def get_C_str_n_post():\n",
-    "    return ':'\n",
-    "def get_C_str_initchr():\n",
-    "    return 'A'\n",
-    "\n",
-    "\n",
-    "def calc_C_str(C_str_nl_pre=None, C_str_matter=None, C_str_n=None, C_str_l=None, C_str_n_post=None, C_str_l_post=None, C_str_initchr=None):\n",
-    "\n",
-    "    if C_str_matter is None:\n",
-    "        C_str_matter = get_C_str_matter()\n",
-    "    if C_str_n is None:\n",
-    "        C_str_n = get_C_str_n()\n",
-    "    if C_str_n_post is None:\n",
-    "        C_str_n_post = get_C_str_n_post()\n",
-    "    if C_str_initchr is None:\n",
-    "        C_str_initchr = get_C_str_initchr()\n",
-    "\n",
-    "    return plot_fns.calc_C_str(C_str_nl_pre=C_str_nl_pre, C_str_matter=C_str_matter, C_str_n=C_str_n, C_str_l=C_str_l, C_str_n_post=C_str_n_post, C_str_l_post=C_str_l_post, C_str_initchr=C_str_initchr)\n",
-    "\n",
-    "\n",
-    "C_str = calc_C_str()\n",
-    "\n",
-    "\n",
-    "\n",
-    "def get_app_dlrs():\n",
-    "    return True\n",
-    "def get_app_tex_num():\n",
-    "    return True\n",
-    "\n",
-    "def capp_dlrs(S, app_dlrs=None):\n",
-    "\n",
-    "    if app_dlrs is None:\n",
-    "        app_dlrs = get_app_dlrs()\n",
-    "\n",
-    "    return misc_fns.capp_dlrs(S=S, app_tex_num=app_dlrs)\n",
-    "\n",
-    "def capp_tex_num(S, app_tex_num=None):\n",
-    "\n",
-    "    if app_tex_num is None:\n",
-    "        app_tex_num = get_app_tex_num()\n",
-    "\n",
-    "    return misc_fns.capp_tex_num(S=S, app_tex_num=app_tex_num)\n",
-    "\n",
-    "\n",
-    "def capp_dlrs_tex_num(S=None, app_dlrs=None, app_tex_num=None, app_null=None):\n",
-    "\n",
-    "    if app_dlrs is None:\n",
-    "        app_dlrs = get_app_dlrs()\n",
-    "    if app_tex_num is None:\n",
-    "        app_tex_num = get_app_tex_num()\n",
-    "\n",
-    "    return misc_fns.capp_dlrs(S=misc_fns.capp_tex_num(S=S, app_tex_num=app_tex_num, app_null=app_null), app_dlrs=app_dlrs, app_null=app_null)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "def calc_root(root=None, mkdir=None):\n",
-    "\n",
-    "    if root is None:\n",
-    "        root = __root__\n",
-    "    return plot_fns.calc_root(root=root, mkdir=mkdir)\n",
-    "\n",
-    "\n",
-    "\n",
-    "def calc_subdir(subs=None, field=None, postsubs=None, app_field=None, root=None, mkdir=None, app_fn=None):\n",
-    "\n",
-    "    if app_fn is None:\n",
-    "        app_fn = True\n",
-    "\n",
-    "    root = calc_root(root=root, mkdir=mkdir)\n",
-    "\n",
-    "    if postsubs is None:\n",
-    "        postsubs = []\n",
-    "    postsubs = misc_fns.make_iterable_array(postsubs)\n",
-    "\n",
-    "    if app_fn:\n",
-    "        postsubs = np.concatenate([['T23', f\"T23_{calc_C_str()['n'][:-1]}\"], postsubs])\n",
-    "\n",
-    "\n",
-    "    return plot_fns.calc_subdir(subs=subs, field=field, postsubs=postsubs, app_field=app_field, root=root, mkdir=mkdir)\n",
-    "\n",
-    "\n",
-    "def calc_dir(dir=None, subs=None, field=None, postsubs=None, app_field=None, root=None, mkdir=None, app_fn=None):\n",
-    "\n",
-    "    if mkdir is None:\n",
-    "        mkdir = True\n",
-    "\n",
-    "    if dir is None:\n",
-    "        dir = calc_subdir(subs=subs, field=field, postsubs=postsubs, app_field=app_field, root=root, mkdir=mkdir, app_fn=app_fn)\n",
-    "    else:\n",
-    "        dir = plot_fns.mkdir_export(dir, mkdir=mkdir)\n",
-    "\n",
-    "    return dir\n",
-    "\n",
-    "\n",
-    "def calc_write_address(dir=None, subs=None, root=None, mkdir=None, app_fn=None, file_nm=None, file_ext=None):\n",
-    "\n",
-    "    dir = calc_dir(dir=dir, subs=subs, root=root, mkdir=mkdir, app_fn=app_fn)\n",
-    "\n",
-    "    return plot_fns.calc_write_address(dir=dir, mkdir=False, file_nm=file_nm, file_ext=file_ext)\n",
-    "\n",
-    "\n",
-    "def print_str_pw(print_str=None, do_print=None, do_write=None, write_mode=None, write_address=None, \n",
-    "                 dir=None, subs=None, field=None, postsubs=None, app_field=None, root=None, mkdir=None, app_fn=None,\n",
-    "                 file_nm=None, file_ext=None):\n",
-    "    \n",
-    "    if field is None:\n",
-    "        field = 'tables' \n",
-    "\n",
-    "    dir = calc_dir(dir=dir, subs=subs, field=field, postsubs=postsubs, app_field=app_field, root=root, mkdir=mkdir, app_fn=app_fn)\n",
-    "\n",
-    "    return plot_fns.print_str_pw(print_str=print_str, do_print=do_print, do_write=do_write, write_mode=write_mode, write_address=write_address, \n",
-    "                                 dir=dir, mkdir=False,  file_nm=file_nm, file_ext=file_ext)\n",
-    "\n",
-    "\n",
-    "def get_dpi(dpi=None):\n",
-    "    if dpi is None:\n",
-    "        dpi = 300\n",
-    "    return dpi\n",
-    "\n",
-    "\n",
-    "def fig_export(fig, height=None, width=None, \n",
-    "               dir=None, subs=None, field=None, postsubs=None, app_field=None, root=None, mkdir=None, app_fn=None,\n",
-    "               thesis=None, formats=None, dpi=None):\n",
-    "\n",
-    "    if field is None:\n",
-    "        field = 'figures'  \n",
-    "\n",
-    "    dir = calc_dir(dir=dir, subs=subs, field=field, postsubs=postsubs, app_field=app_field, root=root, mkdir=mkdir, app_fn=app_fn)\n",
-    "\n",
-    "    plot_fns.fig_export(fig=fig, height=height, width=width, dir=dir, mkdir=False, formats=formats, dpi=get_dpi(dpi=dpi), thesis=get_thesis(thesis=thesis))"
+    "Tmisc = T23_setup.T23_misc()\n",
+    "fstmp = T23_setup.T23_Cfstmp(root=__root__, n=1, title='T23')\n",
+    "fstmp.calc_fnsubs_default()"
    ]
   },
   {
@@ -243,59 +95,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "B20_setup = dict()\n",
-    "\n",
-    "B20_setup['results_dir'] = f\"{__root__}results/\"\n",
-    "\n",
-    "B20_setup['datetime'] = dict()\n",
-    "B20_setup['datetime']['dt'] = {'w': datetime.datetime.now(datetime.timezone.utc)}\n",
-    "B20_setup['datetime']['str'] = {i: misc_fns.dt_str(B20_setup['datetime']['dt'][i]) for i in B20_setup['datetime']['dt']}\n",
-    "\n",
-    "\n",
-    "B20_setup['ticks'] = ['SPX', 'DJI', 'DAX', 'CAC', 'NKX', 'HSI']\n",
-    "\n",
-    "B20_setup['a_q'] = np.array([float(f'{x:.5f}') for x in 0.0025*np.flip(1+np.array(range(30)))])\n",
-    "\n",
-    "B20_setup['a_u'] = np.array([float(f'{x:.5f}') for x in 0.0125*np.array(1+np.array(range(10)))])\n",
-    "\n",
-    "\n",
-    "\n",
-    "B20_setup['mode_bound'] =   {\n",
-    "                                'bi': 'both',\n",
-    "                                'bi_d': ['both', 'left'],\n",
-    "                                'ci': 'both',\n",
-    "                                'ci_s': 'both',\n",
-    "                            }\n",
-    "\n",
-    "\n",
-    "\n",
-    "all_start_dates_price_0 = {\n",
-    "                        \"SPX\": \"1927-12-30\",\n",
-    "                        \"DJI\": \"1927-12-30\",\n",
-    "                        \"DAX\": \"1959-09-28\",\n",
-    "                        \"CAC\": \"1969-01-02\",\n",
-    "                        \"NKX\": \"1949-05-16\",\n",
-    "                        \"HSI\": \"1969-11-24\",\n",
-    "                        }\n",
-    "\n",
-    "\n",
-    "all_start_dates_r = {\n",
-    "                        \"SPX\": \"1928-01-03\",\n",
-    "                        \"DJI\": \"1928-01-03\",\n",
-    "                        \"DAX\": \"1959-09-29\",\n",
-    "                        \"CAC\": \"1969-01-03\",\n",
-    "                        \"NKX\": \"1949-05-17\",\n",
-    "                        \"HSI\": \"1969-11-25\",\n",
-    "                        }\n",
-    "all_start_dates_r_TS = {tick: pd.Timestamp(all_start_dates_r[tick]) for tick in all_start_dates_r}\n",
-    "\n",
-    "\n",
-    "B20_setup['dates'] = {\n",
-    "                        'all_start': all_start_dates_r_TS,\n",
-    "                        'all_end': pd.Timestamp(\"2023-05-20\"),\n",
-    "                        'train_end': pd.Timestamp(\"2023-05-20\"),\n",
-    "                    \n",
-    "                    }"
+    "_setup_T23 = T23_setup.setup_T23(__C__='Cm1', __fit__=False, __vares__=False,\n",
+    "                                    set_cv=False, set_tt=False,\n",
+    "                                    all_end=pd.Timestamp('2023-09-16'),\n",
+    "                                    )"
    ]
   },
   {
@@ -304,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "B20_setup['a_u']"
+    "_setup_T23['tt_a_u']"
    ]
   },
   {
@@ -313,25 +116,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "B20 = log_ret.log_ret(dir_base=__root__, ticks=B20_setup['ticks'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B20.set_tk(\n",
-    "                **B20_setup['dates'],\n",
-    "                cv_vol=[\"GARCH\"], cv_p=1, cv_o=[0,1], cv_q=1, cv_dist=[\"norm\", \"t\"],\n",
-    "                tt_a_u=B20_setup['a_u'], tt_dt_dt_fine=24,\n",
-    "                hb_dist=[\"norm\"], hb_bound=None, hb_mode_bound=B20_setup['mode_bound'], hb_set_fit=True,\n",
-    "                a_q=B20_setup['a_q'],\n",
-    "                #cv_set_am_stats=True, cv_set_eval=False, append_fit_cv_w=True, append_vrs_cv_w=False, cv_write_tick=False,\n",
-    "                #tt_i_0=0, tt_read_params=True, tt_fit_if_need=False,\n",
-    "                set_cv=False, set_tt=True\n",
-    "            )"
+    "B20 = log_ret.log_ret(dir_base=__root__, ticks=_setup_T23['ticks'])\n",
+    "B20.set_tk(**misc_fns.dict_key_rm(_setup_T23, keys_rm='ticks'))"
    ]
   },
   {
@@ -367,7 +153,7 @@
     "fig_cols['fig'].set_size_inches(3.4,2)\n",
     "fig_cols['fig'].tight_layout()\n",
     "\n",
-    "fig_export(fig_cols, height=2, width=3.4)"
+    "fstmp.fig_export(fig_cols, height=2, width=3.4)"
    ]
   },
   {
@@ -403,7 +189,7 @@
     "fig_cols['fig'].set_size_inches(3.4,2)\n",
     "fig_cols['fig'].tight_layout()\n",
     "\n",
-    "fig_export(fig_cols, height=2, width=3.4)"
+    "fstmp.fig_export(fig_cols, height=2, width=3.4)"
    ]
   },
   {
@@ -441,7 +227,7 @@
     "fig_cols['fig'].tight_layout()\n",
     "\n",
     "\n",
-    "fig_export(fig_cols, height=2, width=3.4)"
+    "fstmp.fig_export(fig_cols, height=2, width=3.4)"
    ]
   },
   {
@@ -479,7 +265,7 @@
     "fig_cols['fig'].tight_layout()\n",
     "\n",
     "\n",
-    "fig_export(fig_cols, height=2, width=3.4)"
+    "fstmp.fig_export(fig_cols, height=2, width=3.4)"
    ]
   },
   {
@@ -516,7 +302,7 @@
     "fig_cols['fig'].tight_layout()\n",
     "\n",
     "\n",
-    "fig_export(fig_cols, height=2, width=3.4)"
+    "fstmp.fig_export(fig_cols, height=2, width=3.4)"
    ]
   },
   {
@@ -610,7 +396,7 @@
     "fig_bar['fig'].set_size_inches(5.7,3)\n",
     "fig_bar['fig'].tight_layout()\n",
     "\n",
-    "fig_export(fig_bar, height=3)\n",
+    "fstmp.fig_export(fig_bar, height=3)\n",
     "\n",
     "\n"
    ]
@@ -720,7 +506,7 @@
     "                                        #tick=tick, series=\"r_{{t}}\", plot_tick=True, \n",
     "                                        str_tick=tick, plot_tick=True, \n",
     "                                        an_h='right', an_v='top', \n",
-    "                                        an_x0=0.015, an_y0=0.03, flip_x0ry0t=True, an_mode=get_an_mode())\n",
+    "                                        an_x0=0.015, an_y0=0.03, flip_x0ry0t=True, an_mode=fstmp.get_an_mode())\n",
     "else:\n",
     "    fig_bar['ax2'][0][0].set_ylabel(f\"$\\\\mathrm{{Price}} / \\\\$ $\")\n",
     "    fig_bar['ax'][0][0].set_ylabel(f\"$\\\\ln{{\\\\left[\\\\mathrm{{Price}} / \\\\$ \\\\right]}}$\")\n",
@@ -729,7 +515,7 @@
     "                                        #tick=tick, series=\"r_{{t}}\", plot_tick=True, \n",
     "                                        str_tick=tick, plot_tick=True, \n",
     "                                        an_h='right', an_v='top', \n",
-    "                                        an_x0=0.015, an_y0=0.03, flip_x0ry0t=True, an_mode=get_an_mode())\n",
+    "                                        an_x0=0.015, an_y0=0.03, flip_x0ry0t=True, an_mode=fstmp.get_an_mode())\n",
     "\n",
     "\n",
     "\n",
@@ -740,7 +526,7 @@
     "fig_bar['fig'].set_size_inches(5.7,3)\n",
     "fig_bar['fig'].tight_layout()\n",
     "\n",
-    "fig_export(fig_bar, height=3)\n",
+    "fstmp.fig_export(fig_bar, height=3)\n",
     "\n"
    ]
   },
@@ -751,14 +537,14 @@
    "outputs": [],
    "source": [
     "tabs = []\n",
-    "tabdir = calc_dir(field='tables')\n",
+    "tabdir = fstmp.calc_dir(field=['exports', 'tables'])\n",
     "\n",
     "for pretab in ['ftab', 'tab']:\n",
     "   \n",
-    "   print_str_pw(print_str=[open(f\"{tabdir}{pretab}_{tab}.txt\", \"r\").read() for tab in tabs], do_print=None, do_write=True, write_mode='w', write_address=None, \n",
+    "   fstmp.print_str_pw(print_str=[open(f\"{tabdir}{pretab}_{tab}.txt\", \"r\").read() for tab in tabs], do_print=None, do_write=True, write_mode='w', write_address=None, \n",
     "                dir=tabdir,\n",
     "                file_ext=\".sty\",\n",
-    "                file_nm=f\"{calc_C_str()['n'][:-1]}_{pretab}\")"
+    "                file_nm=f\"{fstmp.calc_C_str(C_str_n_post='')['n']}_{pretab}\")"
    ]
   }
  ],
